--- a/.drone.yml
+++ b/.drone.yml
@@ -269,17 +269,19 @@ steps:
           - feature/*
       event: pull_request
 
-  - name: anchore_scan
-    image: 340268328991.dkr.ecr.eu-west-2.amazonaws.com/acp/anchore-submission:latest
-    pull: always
+  - name: scan-image
+    image: 340268328991.dkr.ecr.eu-west-2.amazonaws.com/acp/trivy/client:latest
+    failure: ignore
+    resources: 
+      limits:
+        cpu: 1000
+        memory: 1024Mi
     environment:
       IMAGE_NAME: sas/refugee-integration-loans:${DRONE_COMMIT_SHA}
-      LOCAL_IMAGE: true
-      TOLERATE: medium
-      WHITELIST_FILE: hof-services-config/Refugee_Integration_Loan/anchore-cve-exceptions.txt
+      IGNORE_UNFIXED: true
     when:
-      branch: master
-      event: pull_request
+      event: 
+      - push
 
   # Deploy to Master UAT environment
   - name: deploy_to_uat
